<resources>
    <string name="app_name">HeroldAndroid</string>
    <string name="loginNameHint">Login</string>
    <string name="loginPasswordHint">Password</string>
    <string name="loginButtonLabel">Login</string>
    <string name="registerButtonLabel">Register</string>
    <string name="okLabel">OK</string>
    <string name="cancelLabel">Cancel</string>
    <string name="drawer_open">drawer_open</string>
    <string name="drawer_close">drawer_close</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
