<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".LoginActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/logo"
        android:src="@drawable/logo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="62dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/loginName"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/loginPassword"
        android:layout_alignEnd="@+id/loginPassword"
        android:hint="@string/loginNameHint"
        android:textAlignment="center" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/loginPassword"
        android:layout_below="@+id/loginName"
        android:layout_centerHorizontal="true"
        android:hint="@string/loginPasswordHint"
        android:textAlignment="center" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginButtonLabel"
        android:id="@+id/loginButton"
        android:layout_marginTop="41dp"
        android:layout_below="@+id/loginPassword"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registerButtonLabel"
        android:id="@+id/registerButton"
        android:layout_below="@+id/loginButton"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
