<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.szwagry.heroldandroid.RegisterActivity"
    android:background="#6c65ee">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/registerName"
        android:hint="@string/loginNameHint"
        android:textAlignment="center"
        android:singleLine="true"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/registerPassword"
        android:layout_marginTop="129dp"
        android:layout_alignEnd="@+id/registerPassword"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/registerPassword"
        android:layout_below="@+id/registerName"
        android:layout_centerHorizontal="true"
        android:hint="@string/loginPasswordHint"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/okLabel"
        android:id="@+id/registerOkButton"
        android:layout_below="@+id/registerPassword"
        android:layout_marginTop="86dp"
        android:layout_alignEnd="@+id/registerPassword"
        android:layout_alignStart="@+id/registerPassword"
        android:layout_alignParentEnd="false" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancelLabel"
        android:id="@+id/registerCancelButton"
        android:layout_below="@+id/registerOkButton"
        android:layout_alignEnd="@+id/registerOkButton"
        android:layout_alignStart="@+id/registerOkButton" />


</RelativeLayout>
